Correction des icônes sur la page Contact pour qu'ils soient visible

--- a/style.css
+++ b/style.css
@@ -701,6 +701,9 @@ a {
 p {
     font-size: 16px;
 }
+.col-sm-6 {
+    width: 100%;
+}
 
 .tight-width-whitespace {
     max-width: 600px;
@@ -760,8 +763,6 @@ h5 {
 h1 {
     color: #333333!important;
 }
-
-
 
 .icons {
     margin-bottom: 14px;
